[package]
name = "ez_gamer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.8.1"
ggez_ui = "0.2.2"
oorandom = "11.1.3"
getrandom = "0.2.8"
fxhash = "0.2.1"
glob = "0.3.0"
serde_json = "1.0.88"
serde = "1.0.147"